# half

./: .gitignore  README.md  README.zh-CN.md
.github/workflows/: codeql.yml
docs/: architecture.md  prd.zh-CN.md  project-structure.md  quickstart.md  quickstart.zh-CN.md  task-lifecycle.md  user-manual.md  user-manual.zh-CN.md
docs/prd/: issue-code-review-loop.md
src/: docker-compose.yml
src/backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml
src/backend/routers/: codex_usage.py  process_templates.py  projects.py  tasks.py
src/backend/services/: codex_usage_cache.py  issue_review_loop.py  polling_service.py  prompt_service.py
src/backend/tests/: test_codex_usage_cache.py  test_contract_fields.py  test_issue_review_loop.py  test_polling_service.py  test_polling_service_manual_refresh.py  test_process_templates.py  test_project_agent_availability.py  test_prompt_service.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx  constants.ts  contracts.test.ts
src/frontend/src/components/: CoLocatedFieldLabel.tsx  DagView.tsx  HelpTooltip.tsx  StatusBadge.tsx  TaskDetailPanel.tsx
src/frontend/src/pages/: AgentsPage.tsx  CodexAgentLoginPage.tsx  PlanPage.tsx  ProjectDetailPage.tsx  ProjectNewPage.test.ts  ProjectNewPage.tsx  TasksPage.tsx
src/frontend/src/styles/: index.css
src/frontend/src/types/: index.ts
src/frontend/src/utils/: applyTemplatePlan.test.ts  applyTemplatePlan.ts  issueReviewLoop.test.ts  issueReviewLoop.ts
