[project]
name = "half-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "sqlalchemy>=2.0.50",
    "pyjwt>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.30",
    "json-repair>=0.59.5",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest",
]

